--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Roboto+Mono:wght@200&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'Fira Sans', sans-serif;
+  text-align: center;
+}
+
+.container ul {
+  padding: 0px;
+  padding-top: 15px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+header {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+}
+
+header img {
+  width: 100%;
+}
+
+ul {
+  list-style-type: none;
+  font-family: 'Fira Sans', sans-serif;
+}
+
+ul a, .container a {
+  color: green;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Fira Sans', sans-serif;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px;
+  padding: 0px;
+  padding-top: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+nav ul a {
+  color: white !important;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul a:active, a:hover {
+  color: yellowgreen !important;
+}
+
+article li {
+  list-style-type: none;
 }
